# pythonHilel

./: .env-example  LICENSE  Makefile  README.md  abstractmethod.py  argarg.py  car.py  car_class.py  config.py  dao.py  database.py  db_2.py  filter_decorator.py  main.py  my_dream.txt  our_database2.sqlite3  pyproject.toml  pythonFunc.py  removeSpaces.py  requirements.txt  schemas.py  sql-theory.py  testFunc.py  testFunctest.py  test_remove_spaces.py  testfilefunc.py
.github/workflows/: testingGit.yml
api_router/: api_products.py  schemas.py  schemas_products.py  schemas_users.py
templates/: navbar.html
tests/: test_math_utils.py  test_validators.py
utils/: email_sender.py  math_utils.py  utils_hashlib.py  validators.py
web_router/: web.py
