[tool.poetry]
name = "pythonhilel"
version = "0.1.0"
description = ""
authors = ["levmerkin124 <chipstop2505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
