[tool.poetry]
name = "pythonhilel"
version = "0.1.0"
description = ""
authors = ["levmerkin124 <chipstop2505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
